--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,10 @@
   color: transparent;
   background-clip: text;
 }
+
+
+.cta-shadow-dm {
+  box-shadow:  0px 0px 100px 12px rgba(177, 158, 255, 0.03)inset;
+  /* -webkit-box-shadow: 0px 0px 118px 22px rgba(0,0,0,0.75) inset;
+  -moz-box-shadow: 0px 0px 118px 22px rgba(0,0,0,0.75) inset; */
+}
